# ask_llm

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  ask_llm.py  chat_mode.py  config_example.json  demo.py  providers.yml  pyproject.toml  requirements.txt  setup.py  trans_config.yml
docs/: ARCHITECTURE_REVIEW.md  BATCH_USAGE.md  DEVELOPMENT.md  README_FORMAT.md  README_ask_llm.md  REFACTOR_PLAN.md  chat_mode_enhancement.md  default_config.example.yml  implementation_status.md  index.md  ollama.md  stream_response.md
docs/commands/: ask.md  batch.md  chat.md  config.md  format.md  index.md  paper.md  trans.md
docs/development/: contributing.md  index.md
docs/guide/: configuration.md  index.md  installation.md  quickstart.md
examples/: format_demo.py  test.md  test_formatted_translated.md  trans-example.md  trans-example_translated_translated.md
examples/batch-examples/: cs-prompt-contents.yml  math.yml  physics-prompt-contents.yml  prompt-contents.yml
prompts/: md-body-format.md  md-body-format_en.md  md-heading-context-batch.md  md-heading-format.md  md-heading-format_en.md  paper-explain-pipeline.defaults.yml  paper-explain-pipeline.yml  tech-paper-trans copy.md  tech-paper-trans-compact.md  tech-paper-trans.md
prompts/paper/: meta.md  outlines.md  section-abstract.md  section-appendices.md  section-conclusion.md  section-discussion.md  section-full.md  section-generic.md  section-introduction.md  section-methods.md  section-model-architecture.md  section-references.md  section-related-work.md  section-results.md
providers/: __init__.py  base.py  openai_compatible.py
scripts/: check_code_quality.sh
src/ask_llm/: __init__.py  __main__.py  cli.py
src/ask_llm/cli/: __init__.py  app.py  common.py  errors.py
src/ask_llm/cli/commands/: __init__.py  ask.py  batch.py  chat.py  config.py  diagnose.py  format_cmd.py  paper.py  trans.py
src/ask_llm/config/: __init__.py  cli_session.py  context.py  default_config.yml  env.py  loader.py  manager.py  merge.py  paper_explain_pipeline.py  providers_catalog.py  unified_config.py
src/ask_llm/core/: __init__.py  batch.py  batch_checkpoint.py  batch_models.py  batch_processor.py  binary_splitter.py  chat.py  checkpoint.py  chunked_llm_job.py  command_runner.py  concurrent.py  constants.py  error_keywords.py  execution_report.py  format_checkpoint.py  format_markdown_file.py  global_batch_runner.py  markdown_structure.py  markdown_token_splitter.py  md_body_formatter.py  md_heading_formatter.py  models.py  paper_explain.py  paper_explain_pipeline.py  processor.py  progress_presenter.py  protocols.py  provider_manager.py  response_parser.py  retry_policy.py  stream_collector.py  task_executor.py  telemetry.py  text_splitter.py  translator.py
src/ask_llm/core/tasks/: __init__.py  builders.py
src/ask_llm/providers/: __init__.py  base.py  openai_compatible.py
src/ask_llm/services/: ask_service.py  batch_service.py  format_service.py  notebook_file_translator.py  paper_service.py  text_file_translator.py  translation_options.py  translation_service.py
src/ask_llm/utils/: __init__.py  api_key_gate.py  batch_exporter.py  batch_loader.py  chunk_balance.py  console.py  engine_facade.py  export_formats.py  fallback_chain.py  file_handler.py  interactive_config.py  md_path_discovery.py  notebook_translator.py  path_resolver.py  pricing.py  prompt_resolver.py  provider_cache.py  provider_specs.py  rate_limiter.py  token_counter.py  trans_config_loader.py  translation_exporter.py
tests/: __init__.py  conftest.py
tests/batch-examples/: prompt-content-pairs.yml  prompt-contents.yml
tests/benchmarks/: test_performance.py
tests/integration/: test_batch_checkpoint.py  test_cli.py  test_format.py  test_trans.py  test_trans_checkpoint.py  test_trans_prompt_file.py
tests/unit/: test_api_key_gate.py  test_ask_service.py  test_batch_exporter.py  test_batch_loader.py  test_batch_processor.py  test_batch_service.py  test_batch_sort.py  test_batch_statistics.py  test_binary_splitter.py  test_checkpoint.py  test_chunk_balance.py  test_cli_session.py  test_concurrent.py  test_config.py  test_diagnose_cli.py  test_error_keywords.py  test_execution_report.py  test_file_handler.py  test_format_service.py  test_markdown_structure.py  test_markdown_token_splitter.py  test_md_body_formatter.py  test_md_heading_formatter.py  test_md_path_discovery.py  test_model_limits.py  test_models.py  test_paper_explain.py  test_paper_explain_pipeline.py  test_pricing.py  test_progress_presenter.py  test_provider_cache.py  test_provider_specs.py  test_rate_limiter.py  test_retry_policy.py  test_stream_collector.py  test_task_executor.py  test_telemetry.py  test_text_splitter.py  test_trans_config_loader.py  test_translation_exporter.py  (+7 more)
utils/: __init__.py  chat_completer.py  config_checker.py  config_loader.py  file_handler.py  logger.py  token_counter.py
